CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( ApplicationTimer )

IF( ${VERBOSE_CONFIGURE} )
	MESSAGE("Flags ${PROJECT_NAME}:")
	SHOW_CMAKE_CXX_FLAGS()
ENDIF()

INCLUDE_DIRECTORIES(
	../include
 )

SET( INCLUDE_FILES
	../include/${PROJECT_NAME}.h
	../include/TimingEntry.h
	../include/TimingSession.h
	../include/TimingStream.h
)

SET( SOURCE_FILES
	../src/${PROJECT_NAME}.cpp
	../src/TimingEntry.cpp
	../src/TimingSession.cpp
	../src/TimingStream.cpp
)

ADD_LIBRARY ( ${PROJECT_NAME} STATIC
	${INCLUDE_FILES}
	${SOURCE_FILES}
)

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Utility")

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

SOURCE_GROUP( "Resource Files" FILES ${RESOURCE_FILES} )